# medical_diagnostics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: main.yml
config/: settings.py  urls.py
media/img/: 14f2df192c5a11f08d50025468e5f747_1.afphoto  Без названия1.afphoto  Без названия2.afphoto
services/: admin.py  forms.py  models.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_slot_number_alter_slot_previous_slot.py  0003_alter_appointment_slot.py  0004_categorycoefficient_appointment_cost_service_doctors_and_more.py  0005_alter_categorycoefficient_category.py  0006_alter_categorycoefficient_category.py  0007_alter_categorycoefficient_category_diagnosticresult.py  0008_alter_diagnosticresult_attachments_and_more.py  0009_alter_appointment_options_appointment_payment_status_and_more.py  0010_alter_appointment_payment_status.py  0011_service_rating_review.py  0012_alter_review_text.py
static/css/: style.css
templates/: develop.html  footer.html  index.html  index_old.html  nav.html
templates/registration/: login.html  password_change_form.html  register.html
templates/services/: appointment_create.html  contacts.html  feedback.html  home.html  service_detail.html  services.html
templates/users/: about.html  profile.html  user_update.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_department_doctor_specialization_alter_user_options_and_more.py  0003_doctor_category.py  (+7 more)
(+1 files in other folders)
