[project]
name = "medical-diagnostics"
version = "0.1.0"
description = "Website of the medical diagnostics company"
authors = [
    {name = "Vladimir Sulym",email = "vormagic@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django = "^5.2"

