[project]
name = "medical-diagnostics"
version = "0.1.0"
description = "Website of the medical diagnostics company"
authors = [
    {name = "Vladimir Sulym",email = "vormagic@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "phonenumbers (>=9.0.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django = "^5.2"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
redis = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
ipython = "^9.2.0"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 119
